--- a/views/aevent.ejs
+++ b/views/aevent.ejs
@@ -358,7 +358,7 @@
             
             <div class="page-container float-right">
                 <div class="row">
-                    <h3 class="col col-lg-9">Upcoming Events</h3><br>
+                    <h3 class="col col-lg-9">Admin Panel</h3><br>
                     
                    
                     
