--- a/views/login.ejs
+++ b/views/login.ejs
@@ -97,7 +97,7 @@ margin-bottom: 100px;
     <div class="row">
       <h1 class="title col col-9">EVENTOLITIES</h1>
       
-       <button type="submit" onclick="window.location.href='http://localhost:5000/admin'" class="adm btn btn-primary col col-2">ADMIN</button>
+       <button type="submit" onclick="window.location.href='/admin'" class="adm btn btn-primary col col-2">ADMIN</button>
      
      </div>
 <center>
