--- a/views/aevent.ejs
+++ b/views/aevent.ejs
@@ -364,7 +364,7 @@
                     
                 </div>
                 
-                <a href="http://localhost:5000/addevent" class="col col-lg-3 btn btn-primary add" style="margin-bottom: 10px; background-color: #2196F3; border-color: #2196F3; ">Add Event</a>
+                <a href="/addevent" class="col col-lg-3 btn btn-primary add" style="margin-bottom: 10px; background-color: #2196F3; border-color: #2196F3; ">Add Event</a>
                 
                 
                 <div class="row cen">
