--- a/views/wrong.ejs
+++ b/views/wrong.ejs
@@ -86,7 +86,7 @@ input{
     <div class="row">
         <h1 class="title col col-9">EVENTOLITIES</h1>
         
-         <button type="submit" onclick="window.location.href='http://localhost:5000'" class="adm btn btn-primary col col-2">REGISTER</button>
+         <button type="submit" onclick="window.location.href='/admin'" class="adm btn btn-primary col col-2">ADMIN</button>
        
        </div>
 <center>
