--- a/views/dataindex.ejs
+++ b/views/dataindex.ejs
@@ -65,7 +65,7 @@
         <div class="gap">
 
         </div>
-    <a href="/event" class="btn btn-outline-dark btn-lg my-5 mx-3" >Home</a>
+    <a href="/aevent" class="btn btn-outline-dark btn-lg my-5 mx-3" >Home</a>
 </center>
 </body>
 </html>
