--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,13 +38,13 @@ margin-bottom: 5px;
     <div class="icon2">
     <i class="fa fa-envelope" aria-hidden="true"style="color:#2E90CC;font-size:2.1vw;"></i></div>
       <div class="form3">
-        <input style="width:28vw;height:2.5vw;" type="text" id="text" placeholder="E-Mail" name="email">
+        <input style="width:28vw;height:2.5vw;" type="text" id="text" placeholder="E-Mail" name="email" value="santhoshkuamarc.19cse@kongu.edu">
       </div><br>
     
     <div class="icon3">
     <i class="fas fa-unlock" aria-hidden="true"style="color:#2E90CC;font-size:2.1vw;"></i></div>
       <div class="form4">
-        <input style="width:28vw;height:2.5vw;" type="text" id="text" placeholder="Password" name="password">
+        <input style="width:28vw;height:2.5vw;" type="text" id="text" placeholder="Password" name="password" value="08112000" >
       </div><br><br>
     
     
