--- a/views/aevent.ejs
+++ b/views/aevent.ejs
@@ -253,10 +253,11 @@
                 <div class="row d-flex justify-content-end">
                     <div class="col-md-12 px-5">
                         <ul class="mb-5">
+                            <li ><a href="/aevent"><span>EVENTOLITIES</span></a></li><br>
                             <li class="active"><a href="/aevent"><span>Home</span></a></li>
                             <li class="active"><a href="/dataindex"><span>Events</span></a></li>
-                            <li><a href="http://localhost:5000/event#footer"><span>Contact US</span></a></li>
-                            <li><a href="/login"><span>LogOut</span></a></li>
+                            <li><a href="/aevent#footer"><span>Contact US</span></a></li>
+                            <li><a href="/"><span>LogOut</span></a></li>
                         </ul>
                     </div>
                     <div class="col px-5 copyright">
