--- a/views/event.ejs
+++ b/views/event.ejs
@@ -252,10 +252,11 @@
                 <div class="row d-flex justify-content-end">
                     <div class="col-md-12 px-5">
                         <ul class="mb-5">
-                            <li class="active"><a href="/event"><span>Home</span></a></li>
+                            <li ><a href="/"><span>EVENTOLITIES</span></a></li><br>
+                            <li class="active"><a href="/"><span>Home</span></a></li>
                             
-                            <li><a href="http://localhost:5000/event#footer"><span>Contact US</span></a></li>
-                            <li><a href="/login"><span>LogOut</span></a></li>
+                            <li><a href="/#footer"><span>Contact US</span></a></li>
+                            <li><a href="/admin"><span>Admin</span></a></li>
                         </ul>
                     </div>
                     <div class="col px-5 copyright">
