--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 <style>
@@ -56,4 +56,106 @@ margin-bottom: 5px;
     <center>
 
     </body>
-    </html>
+    </html> -->
+
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Login Cards</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet" id="fontawesome-css">
+    <meta name="viewport" content="width=device-width" initial-scale="1.0"> 
+    <style>
+        .divider-text {
+position: relative;
+text-align: center;
+margin-top: 15px;
+margin-bottom: 15px;
+}
+
+.divider-text span {
+padding: 7px;
+font-size: 12px;
+position: relative;   
+z-index: 2;
+}
+
+.divider-text:after {
+content: "";
+position: absolute;
+width: 100%;
+border-bottom: 1px solid #ddd;
+top: 55%;
+left: 0;
+z-index: 1;
+}
+
+.btn-facebook {
+background-color: #405D9D;
+color: #fff;
+}
+
+.btn-twitter {
+background-color: #42AEEC;
+color: #fff;
+}
+
+body{
+	background: #2E2E2E;
+}
+
+    </style>
+</head>
+<body>
+
+<div class="container">
+	<br>
+   
+
+  
+
+ 
+	<p class="text-center" style="color: #fff;">ADMIN PANEL</p>
+	<hr>
+<div class="card bg-dark">
+	<article class="card-body mx-auto" >
+		
+		
+		<form action="/admin" method="post">
+           
+		
+		<div class="form-group input-group">
+			<div class="input-group-prepend">
+				<span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+			 </div>
+			<input class="form-control" placeholder="Email address" type="email" name="email" value="santhoshkuamarc.19cse@kongu.edu">
+		</div>
+		
+		
+        <div class="form-group input-group">
+			<div class="input-group-prepend">
+				<span class="input-group-text"> <i class="fas fa-handshake"></i> </span>
+			 </div>
+			<input  class="form-control" placeholder="Password" type="text" name="password" value="08112000">
+		</div>
+		
+		                                    
+		<div class="form-group">
+            
+                
+			<button type="submit" class="btn btn-primary btn-block" onclick="window.location.href='/aevent'"> LOGIN  </button>
+           
+        
+		</div>      
+                                                                    
+	</form>
+	</article>
+</div>
+</div> 
+
+</body>
+</html>
