--- a/views/sucess.ejs
+++ b/views/sucess.ejs
@@ -25,7 +25,7 @@
     <h3 class="h3 p-3">Thanks for the Registration!</h3>
     <p>Hope you will enjoy the events !!!</p>
 </div>
-<a href="/event" class="btn btn-outline-dark btn-lg my-5 mx-3">Events</a>
+<a href="/" class="btn btn-outline-dark btn-lg my-5 mx-3">Events</a>
 </center>
 </body>
 </html>
